[29.September 2008]
- Added directory lib/ (for 'redistributed' libraries -
  currently gameui, schwerengine and script)
- freevikings.rb: safe RUDL loading (checks for RubyGems and bypasses them
  if needed)
- User's manual: Installation, Running and Controls finished
- README: changed dependencies section (removed script, added note
  about it being redistributed)

[27.September 2008]
- GameUI::Textrenderer#create_text_box - new optional argument (background
  colour);
  private method make_lines considers line-breaks correctly again
- gamestate.rb: password displayed at the beginning of level has black 
  background again
- I have written first few paragraphs of User's manual

[25.September 2008]
- game.rb, location.rb: Game#is_exit? -> Location#exitted?
- DefaultCampaign/ArcticLevelSet/SwitchPlace: class IceBoard made a subclass
  of Entity (in order to provide it with methods paint_rect and collision_rect)
- exit.rb: docs RD->RDoc
- location.rb: added 'event handlers' on_beginning, on_exit;
  modified exit conditions
- RubyCampaign/Intro: on_beginning and on_exit handlers start Stories;
- RubyCampaign/Intro, story.rb: TalkFrame class moved to story.rb (it seems 
  useful)
- game.rb: fixed error "uncaught exception at the end of world";
  end-of-world-screen removed (removed method Game#end_of_game) - every 
  campaign should make it's own (by setting on_exit handler in the last
  level)
- DefaultCampaign/NucLabs/YellowHall: New end-of-world Story.
(Uff, two items disappeared from TODO, three or four new ones are there...)

[23.September 2008]
- locationloader.rb: I found out that SyntaxError isn't subclass
  of StandardError, but of ScriptError; so I extended the rescue clause...
- monsters/cottage.rb: simple StaticObject, vikings' cottage
- monsters/boat.rb: speed-up
- RubyCampaign/Intro/intro_script: cottages, door, key, lock
- RubyCampaign/levelsuite.rb: Assembler commented out
- game.rb: FPS displaying fixed (no unreal high numbers)

[20.September 2008]